modules/fs/main/default/objects/ServiceAppointment/fields/Assigned_Mechanic_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Mechanic_Name__c</fullName>
    <label>Assigned Mechanic Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>