modules/fs/main/default/objects/ServiceAppointment/fields/BuildingName__c.field-meta.xml
<CustomField>
    <fullName>BuildingName__c</fullName>
    <formula>Unit__r.Location.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Name</label>
    <type>Text</type>
</CustomField>