modules/fs/main/default/objects/ServiceAppointment/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car Controller</fullName>
            </value>
            <value>
                <fullName>Group Controller</fullName>
            </value>
            <value>
                <fullName>Car Door</fullName>
            </value>
            <value>
                <fullName>Door Operator</fullName>
            </value>
            <value>
                <fullName>Car Equipment</fullName>
            </value>
            <value>
                <fullName>Hoistway Doors</fullName>
            </value>
            <value>
                <fullName>Hoistwat Equipment</fullName>
            </value>
            <value>
                <fullName>Governor</fullName>
            </value>
            <value>
                <fullName>Hall Fixture</fullName>
            </value>
            <value>
                <fullName>Lobby Panel</fullName>
            </value>
            <value>
                <fullName>Selector/PPT</fullName>
            </value>
            <value>
                <fullName>Generator</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Canadian</fullName>
            </value>
            <value>
                <fullName>Hydraulic Machine</fullName>
            </value>
            <value>
                <fullName>Gear Case</fullName>
            </value>
            <value>
                <fullName>Main Machine/Brake</fullName>
            </value>
            <value>
                <fullName>Escalator</fullName>
            </value>
            <value>
                <fullName>Pit</fullName>
            </value>
            <value>
                <fullName>Not Equipment Related</fullName>
            </value>
            <value>
                <fullName>Clean/Standby/Survey/Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>