modules/fs/main/default/objects/ServiceAppointment/fields/Component_Code__c.field-meta.xml
<CustomField>
    <fullName>Component_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component Code</label>
    <referenceTo>ComponentCode__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>