modules/fs/main/default/objects/ServiceAppointment/fields/ETA_Mins_Left__c.field-meta.xml
<CustomField>
    <fullName>ETA_Mins_Left__c</fullName>
    <formula>( Initial_ETA__c -Now())*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETA Mins Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>