modules/fs/main/default/objects/ServiceAppointment/fields/FS_IsInitialETAGreaterThan__c.field-meta.xml
<CustomField>
    <fullName>FS_IsInitialETAGreaterThan__c</fullName>
    <description>Is FS Initial ETA Greater than LTA</description>
    <formula>Initial_ETA__c &gt; Latest_Time_of_Arrival__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FS IsInitialETAGreaterThanLTA</label>
    <type>Checkbox</type>
</CustomField>