modules/fs/main/default/objects/ServiceAppointment/fields/Initial_Duration__c.field-meta.xml
<CustomField>
    <fullName>Initial_Duration__c</fullName>
    <label>Initial Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>