modules/fs/main/default/objects/ServiceAppointment/fields/Initial_ETA__c.field-meta.xml
<CustomField>
    <fullName>Initial_ETA__c</fullName>
    <description>NAA Initial ETA</description>
    <label>Initial ETA</label>
    <type>DateTime</type>
</CustomField>