modules/fs/main/default/objects/ServiceAppointment/fields/Initial_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Initial_Scheduled_Start__c</fullName>
    <label>Initial Scheduled Start</label>
    <type>DateTime</type>
</CustomField>