modules/fs/main/default/objects/ServiceAppointment/fields/Last_Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Updated__c</fullName>
    <label>Last Status Updated</label>
    <type>DateTime</type>
</CustomField>