modules/fs/main/default/objects/ServiceAppointment/fields/Latest_Time_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Latest_Time_of_Arrival__c</fullName>
    <label>Latest Time of Arrival</label>
    <type>DateTime</type>
</CustomField>