modules/fs/main/default/objects/ServiceAppointment/fields/Local_Time_ETA__c.field-meta.xml
<CustomField>
    <fullName>Local_Time_ETA__c</fullName>
    <label>Local Time ETA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>