modules/fs/main/default/objects/ServiceAppointment/fields/Local_Time_LTA__c.field-meta.xml
<CustomField>
    <fullName>Local_Time_LTA__c</fullName>
    <label>Local Time LTA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>