modules/fs/main/default/objects/ServiceAppointment/fields/Payroll_Id__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Id__c</fullName>
    <label>Payroll Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>