modules/fs/main/default/objects/ServiceAppointment/fields/Prior_to_ETA__c.field-meta.xml
<CustomField>
    <fullName>Prior_to_ETA__c</fullName>
    <formula>Now()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior to ETA</label>
    <type>DateTime</type>
</CustomField>