modules/fs/main/default/objects/ServiceAppointment/fields/Unit_Condition__c.field-meta.xml
<CustomField>
    <fullName>Unit_Condition__c</fullName>
    <label>Unit Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work Complete, Unit In Service</fullName>
            </value>
            <value>
                <fullName>Work Not Complete, Unit In Service</fullName>
            </value>
            <value>
                <fullName>Work Complete, Unit Out Of Service</fullName>
            </value>
            <value>
                <fullName>Work Not Complete, Unit Out Of Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>