modules/fs/main/default/objects/ServiceAppointment/fields/Work_Performed_Code__c.field-meta.xml
<CustomField>
    <fullName>Work_Performed_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Performed Code</label>
    <referenceTo>WorkPerformedCode__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>