modules/fs/main/default/objects/ServiceAppointment/validationRules/Accepted_SA_cannot_be_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Accepted_SA_cannot_be_Rejected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(IF(ISPICKVAL(Status,&quot;Accepted&quot;),true,false),IF(ISPICKVAL(Status,&quot;In Progress&quot;),true,false)), ISCHANGED( Accept_Reject__c ) )</errorConditionFormula>
    <errorMessage>You cannot &apos;Reject&apos; Service appointment once it is accepted</errorMessage>
</ValidationRule>