modules/fs/main/default/objects/ServiceAppointment/validationRules/ETA_Required_at_Acceptance_SA.validationRule-meta.xml
<ValidationRule>
    <fullName>ETA_Required_at_Acceptance_SA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF(ISPICKVAL(Accept_Reject__c,&quot;Accept&quot;),true, false), IF(ISNULL( Initial_ETA__c), true, false))</errorConditionFormula>
    <errorMessage>Please Provide an Initial ETA while accepting Service Appointment</errorMessage>
</ValidationRule>