modules/fs/main/default/objects/ServiceAppointment/validationRules/ETA_should_not_be_in_past.validationRule-meta.xml
<ValidationRule>
    <fullName>ETA_should_not_be_in_past</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Initial_ETA__c &lt; NOW(),true,false)</errorConditionFormula>
    <errorMessage>Initial ETA date/time should not be in past.</errorMessage>
</ValidationRule>