modules/fs/main/default/objects/ServiceAppointment/validationRules/FS_Description_to_limit_75.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_Description_to_limit_75</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Description ) &gt; 75</errorConditionFormula>
    <errorMessage>Description should not exceed 75 characters.</errorMessage>
</ValidationRule>