modules/fs/main/default/objects/ServiceAppointment/listViews/All_Uncompleted_Service_Appointments.listView-meta.xml
<ListView>
    <fullName>All_Uncompleted_Service_Appointments</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>Assigned_Mechanic_Name__c</columns>
    <columns>LatestEndTime</columns>
    <columns>ReasonSA__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Cannot Complete</value>
    </filters>
    <filters>
        <field>ReasonSA__c</field>
        <operation>equals</operation>
        <value>Actual Duration Inadequate</value>
    </filters>
    <label>SA With Status: Cannot Complete</label>
    <sharedTo>
        <role>CSRSupervisor</role>
    </sharedTo>
</ListView>