modules/fs/main/default/objects/ServiceAppointment/listViews/SAWithCallback.listView-meta.xml
<ListView>
    <fullName>SAWithCallback</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>LatestEndTime</columns>
    <columns>Assigned_Mechanic_Name__c</columns>
    <columns>ReasonSA__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ReasonSA__c</field>
        <operation>equals</operation>
        <value>Couldn&apos;t Fulfill Due To Other Engagement</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Cannot Complete</value>
    </filters>
    <label>SA With CallBack</label>
</ListView>